--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
-        "laravelcollective/html": "^5.6|^6|^7|^8",
-        "illuminate/database": "^5.6@dev|^6|^7|^8",
-        "illuminate/validation": "^5.6@dev|^6|^7|^8"
+        "php": ">=7.3",
+        "laravelcollective/html": "^6|^7|^8",
+        "illuminate/database": "^7|^8",
+        "illuminate/validation": "^7|^8"
     },
     "require-dev": {
         "orchestra/testbench": "~3.6"
